# npdatetime

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  build.rs  build.sh  guidelines.md  index.html  mkdocs.yml  projectstructure  pyproject.toml  setup.py  sitemap.xml  update-version.sh  update_version.py
.github/: CICD_SETUP.md  FUNDING.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  test-bindings.yml
ASTRONOMY/: index.html
DEVELOPMENT_GUIDE/: index.html
IMPLEMENTATION_GUIDE/: index.html
PROJECT_STRUCTURE/: index.html
ROADMAP/: index.html
benches/: date_conversion.rs
bindings/django/: .gitignore  CHANGELOG.md  DEVELOPER.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  WORKFLOW.md  build_assets.py  build_assets.sh  pyproject.toml  setup.py
bindings/django/example/: README.md  __init__.py  admin.py  forms.py  models.py
bindings/django/npdatetime_django/: __init__.py  apps.py  forms.py  models.py  widgets.py
bindings/django/npdatetime_django/static/npdatetime_django/css/: date_picker.css
bindings/django/npdatetime_django/static/npdatetime_django/js/: date_picker.min.js
bindings/django/npdatetime_django/templates/npdatetime_django/widgets/: date_picker.html  picker.html
bindings/django/npdatetime_django/templatetags/: __init__.py  nepali_date.py
bindings/django/npdt/: __init__.py  apps.py  utils.py  widgets.py
bindings/django/npdt/static/npdt/css/: picker.css
bindings/django/npdt/static/npdt/js/: picker.min.js
bindings/django/npdt/templates/npdt/widgets/: date_range.html  inline_picker.html  picker.html
bindings/django/npdt/templatetags/: __init__.py  nepali_date.py
bindings/javascript/: .gitignore  .npmignore  Cargo.toml  README.md  date_picker.css  date_picker.js  date_picker_demo.html  example.html  package.json  picker.js
bindings/javascript/demo/: date_picker_demo.html  example.html  index.html
bindings/javascript/src/: lib.rs
bindings/php/: Cargo.toml  README.md  composer.json  test_npdatetime.php
bindings/php/src/: lib.rs
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml  test_npdatetime.py
bindings/python/src/: lib.rs
bindings/symfony/: PACKAGIST.md  README.md  composer.json
bindings/symfony/config/: services.yaml
bindings/symfony/src/: NpdatetimeBundle.php
bindings/symfony/src/DependencyInjection/: NpdatetimeExtension.php
bindings/symfony/src/Service/: NepaliDateService.php
data/: calendar_bs.csv
data/validation/: test_cases.csv
docs/: ASTRONOMY.md  DEVELOPMENT_GUIDE.md  IMPLEMENTATION_GUIDE.md  PROJECT_STRUCTURE.md  ROADMAP.md  astronomical_algo_for_bs.md  guide.md  index.md
examples/: basic_usage.rs  calculate_tithi.rs  compare_dates.rs  compare_methods.rs  conversion_demo.rs  date_arithmetic.rs  formatting.rs  real_world_app.rs  temp_verify.rs  test_future_dates.rs  validate_all_years.rs
examples/astronomical/: calculate_sankranti.rs
guide/: index.html
npdatetime/: __init__.py  __init__.pyi  config.py  core.py  datetime.py  fiscal_year.py  npdate.py  utils.py
rustdoc/: crates.js  help.html  index.html  settings.html  src-files.js
rustdoc/npdatetime/: all.html  constant.VERSION.html  index.html  sidebar-items.js
rustdoc/npdatetime/astronomical/: index.html  sidebar-items.js
rustdoc/npdatetime/astronomical/calendar/: index.html  sidebar-items.js  struct.BsCalendar.html  struct.YearInfo.html
rustdoc/npdatetime/astronomical/core/: enum.ZodiacSign.html  index.html  sidebar-items.js
rustdoc/npdatetime/astronomical/lunar/: index.html  sidebar-items.js
rustdoc/npdatetime/astronomical/solar/: index.html  sidebar-items.js
rustdoc/npdatetime/core/: index.html  sidebar-items.js
rustdoc/npdatetime/core/date/: constant.BS_EPOCH_AD.html  constant.BS_EPOCH_YEAR.html  constant.NEPALI_MONTHS.html  constant.NEPALI_MONTHS_UNICODE.html  constant.NEPALI_WEEKDAYS.html  fn.days_to_gregorian.html  fn.gregorian_days_in_month.html  fn.gregorian_days_since_epoch.html  fn.gregorian_to_days.html  fn.is_gregorian_leap_year.html  index.html  (+3 more)
rustdoc/npdatetime/lookup/: fn.get_days_in_month.html  index.html  sidebar-items.js
rustdoc/npdatetime/prelude/: index.html
rustdoc/search.index/: 025e7bed075c.js  05c38be0854b.js  0631c177981a.js  06c9d26634b4.js  0a7d4e9bc54e.js  16de0408abfd.js  1ab539f588e3.js  232867256854.js  248604bdc674.js  25c08feb989d.js  2888238cce18.js  30332549731a.js  32665e64184d.js  35b684006234.js  3a3e0bdc5702.js  44c15c848b0c.js  49fc13b9be0d.js  4a38e06d909d.js  4d3813c6c40d.js  4e014bb7310f.js  5919ccaebd5e.js  5bb8dc46043d.js  5e801fd498fe.js  5f776a99beee.js  5fa78321a603.js  645876a4e7d5.js  67180625ba7e.js  6a37b7703c88.js  6e11f35aa95a.js  6f116043bd84.js  754a929c95d7.js  78135633a5f6.js  root.js
rustdoc/search.index/crateNames/: 32d354def5c8.js
rustdoc/search.index/desc/: 4f221cd03e13.js
rustdoc/search.index/entry/: 364f1393b0cc.js
rustdoc/search.index/function/: 085566bcfde0.js
rustdoc/search.index/generic_inverted_index/: 2ab55ad15a12.js
rustdoc/search.index/name/: c61164d517c7.js
rustdoc/search.index/normalizedName/: d85ffc098fb3.js
rustdoc/search.index/path/: 8a6782f9bfed.js
rustdoc/search.index/type/: 35378b54f50d.js
rustdoc/src/npdatetime/: lib.rs.html
search/: search_index.json
src/: lib.rs
src/astronomical/: mod.rs
src/astronomical/calendar/: bs_date.rs  leap_month.rs  mod.rs  month_calculator.rs  synchronization.rs
src/astronomical/core/: mod.rs  newton_raphson.rs  time.rs
src/astronomical/lunar/: elp2000.rs  mod.rs  phases.rs  position.rs  tithi.rs
src/astronomical/solar/: mod.rs  position.rs  sankranti.rs  vsop87.rs
src/calendar/: mod.rs
src/core/: constants.rs  date.rs  datetime.rs  error.rs  format.rs  mod.rs  parse.rs  time.rs
src/data/: embedded.rs
src/lookup/: compressed.rs  converter.rs  data.rs  mod.rs
src/lunar/: elp2000.rs  mod.rs  tithi.rs
src/solar/: mod.rs  position.rs  sankranti.rs  vsop87.rs
src/utils/: interpolation.rs  validation.rs
tests/: integration_test.rs
tests/fisical_year/: test_get_fiscal_quarter.py
(+124 files in other folders)
