[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npdatetime"
version = "0.1.0"
description = "Datetime utilities for numpy arrays"
authors = [{name = "Amrit Giri", email = "amritgiri02595@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]