[package]
name = "npdatetime-wasm"
version = "0.1.8"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
npdatetime = { path = "../..", features = ["serde", "astronomical"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
