[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "npdatetime"
version = "0.1.4"
description = "Fast Nepali (Bikram Sambat) datetime library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["nepali", "bikram-sambat", "calendar", "datetime", "nepal"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/4mritGiri/npdatetime-rust"
Repository = "https://github.com/4mritGiri/npdatetime-rust"
